--- a/css/style.css
+++ b/css/style.css
@@ -79,3 +79,62 @@ body{
   background-color: #fff;
   border: 1px solid blue;
 }
+.image{
+  height: 180px;
+  width: 33.33%;
+  flex-grow: 1;
+  background-size: cover;
+  background-repeat: no-repeat;
+  margin: 20px 0 0 20px;
+  position: relative;
+}
+.image1{
+  background-image: url("../images/box1_img.jpg");
+}
+.image2{
+  background-image: url("../images/box2_img.jpg");
+}
+.pasek{
+  position: absolute;
+  top: 110px;
+  height: 50px;
+  width: 100%;
+  background-color: rgba(255, 255, 255, 0.5);
+  text-align: left;
+  padding: 10px 0 0 10px;
+  font-weight: bold;
+}
+.image::after{
+  content: '';
+  position: absolute;
+  bottom: 30px;
+  left: 10px;
+  width: 100px;
+  height: 2px;
+  border: 1px solid rgb(34, 189, 170);
+  background-color: rgb(34, 189, 170);
+}
+.third-field{
+  width: 33.33%;
+  flex-grow: 1;
+  height: 180px;
+  border: 1px solid rgb(158, 164, 160);
+  margin: 20px 20px 0 20px;
+  position: relative;
+}
+.third-field h2{
+  position: relative;
+  text-align: left;
+  font-size: 14px;
+  font-weight: bold;
+  padding: 30px 0 0 20px;
+}
+.kreska{
+  position: absolute;
+  top: 50px;
+  left: 20px;
+  width: 100px;
+  height: 3px;
+  border: 1px solid rgb(34, 189, 170);
+  background-color: rgb(34, 189, 170);
+}
