--- a/css/style.css
+++ b/css/style.css
@@ -117,7 +117,7 @@ body{
 .third-field{
   width: 33.33%;
   flex-grow: 1;
-  height: 180px;
+  height: 200px;
   border: 1px solid rgb(158, 164, 160);
   margin: 20px 20px 0 20px;
   position: relative;
@@ -137,4 +137,77 @@ body{
   height: 3px;
   border: 1px solid rgb(34, 189, 170);
   background-color: rgb(34, 189, 170);
+}
+.container-price{
+  max-width: 1000px;
+  height: 600px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  background-color: #eee;
+  border: 1px solid blue;
+  position: relative;
+}
+.container-price h2{
+  position: absolute;
+  top: 25px;
+  left: 40px;
+  font-weight: 400;
+}
+.kreska2{
+  position: absolute;
+  top: 55px;
+  left: 40px;
+  width: 300px;
+  height: 4px;
+  border: 1px solid rgb(34, 189, 170);
+  background-color: rgb(34, 189, 170);
+}
+.price-field{
+  width: 33.33%;
+  height: 400px;
+  flex-grow: 33.33%;
+  margin: 150px 0 0 20px;
+  border: 1px solid rgb(158, 164, 160);
+  text-align: center;
+  padding-top: 50px;
+  position: relative;
+}
+.price-field:last-child{
+  margin-right: 20px;
+}
+.circle{
+  position: absolute;
+  top: -33px;
+  left: 40%;
+  width: 50px;
+  height: 50px;
+  border: 1px solid rgb(158, 164, 160);
+  border-radius: 50%;
+  background-color: #eee;
+}
+.wheel{
+  position: absolute;
+  top: -20px;
+  left: 45%;
+  width: 25px;
+  height: 25px;
+  border: 1px solid rgb(158, 164, 160);
+  border-radius: 50%;
+  background-color: rgb(158, 164, 160);
+}
+.price{
+  width: 100px;
+  height: 100px;
+  border: 1px solid rgb(158, 164, 160);
+  border-radius: 50%;
+  position: absolute;
+  top: 90px;
+  left: 80.5px;
+  padding-top: 25px;
+  font-size: 26px;
+  font-weight: bold;
+}
+.price p{
+  font-size: 12px;
 }
